# photohub

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: .env.dist  Dockerfile  pyproject.toml  requirements.txt  schema.yml
backend/api/: models.py  views.py
backend/api/migrations/: 0001_initial.py
backend/app/: color_utils.py  database.py  main.py  settings.py  urls.py
backend/src/: config.py  database.py  exceptions.py  main.py  models.py
backend/src/category/: exceptions.py  router.py  schemas.py  service.py
backend/src/photo/: config.py  constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
database/: createDjangoUser.sql  createFunctions.sql  createLexer.sql  createPhotohubUser.sql  createTables.sql  createTestData.sql  dropTables.sql  insertCategories.sql
docs/: IMAGE_FETCHING_FLOW.md  IMAGE_FLOW_DISCUSSION.md  IMAGE_FLOW_SEQUENCE.md  IMAGE_IMPLEMENTATION_GUIDE.md
frontend/: .dockerignore  Dockerfile  angular.json  openapitools.json  package-lock.json  package.json  tsconfig.json
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.html  app.routes.ts  app.ts
frontend/src/app/components/item-list/: item-list.component.html  item-list.component.ts
frontend/src/app/core/api/: README.md  api.base.service.ts
frontend/src/app/core/clientEnums/: orientation.client-enum.ts  visibility.client-enum.ts
frontend/src/app/core/clients/: category.client.ts  (+1 more)
frontend/src/app/services/: item.service.ts
other/: bulk_upload_photos.py  dominant_color.py  test_photo_data.py
(+126 files in other folders)
