[project]
name = "photohub-backend"
version = "0.1.0"
description = "A FastAPI service to upload and search photos."
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115.14",
    "pydantic-settings~=2.10.1",
    "oracledb~=3.2.0",
    "numpy~=2.3.1",
    "opencv-python~=4.11.0.86",
    "uvicorn[standard]~=0.35.0",
    "python-multipart~=0.0.20",
    "filetype~=1.2.0",
]
[project.optional-dependencies]
dev = [
    "python-dotenv~=1.0.1",
]